# RobotFramework

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  Readme.md
docs/hardware/: Readme.md
include/messages/: IMessage.h  MotorMessage.h
include/model/: EncoderModel.h  GenericSensorModel.h  ISensorModel.h  RobotModel.h  SensorModel.h
include/util/: HardwareID.h
modules/code-coverage/: CodeCoverage.cmake
src/: main.cpp
src/messages/: MotorMessage.cpp
src/model/: EncoderModel.cpp  RobotModel.cpp  SensorModel.cpp
src/util/: HardwareID.cpp
test/: CMakeLists.txt  test-main.cpp
test/messages/: IMessageTests.cpp
test/src/: main.cpp
test/src/messages/: IMessageTests.cpp  MotorMessageTests.cpp
test/src/model/: EncoderModel.cpp  GenericSensorModel.cpp  RobotModel.cpp  SensorModel.cpp
test/src/util/: HardwareID.cpp
